refactor: 💡 广告组管理调整为RPC风格命名
